--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,9 @@ dependencies {
     // 프로젝트 유효성 검사를 위한 의존성 입력
     implementation('jakarta.validation:jakarta.validation-api:3.0.2')
     implementation('commons-validator:commons-validator:1.7')
+
+    // 추가된 classmate 의존성
+    implementation('com.fasterxml:classmate:1.5.1')
 }
 
 test {
